--- a/app/src/main/res/layout/dialog_city_selection.xml
+++ b/app/src/main/res/layout/dialog_city_selection.xml
@@ -10,6 +10,10 @@
         <variable
             name="context"
             type="android.content.Context" />
+
+        <variable
+            name="isHavingData"
+            type="Boolean" />
     </data>
 
     <LinearLayout
@@ -37,6 +41,17 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_10sdp" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvNoData"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_semibold"
+            android:gravity="center"
+            android:paddingVertical="@dimen/_30sdp"
+            android:text="@string/no_cities_found"
+            android:textColor="@color/black"
+            android:visibility="@{isHavingData ? View.GONE : View.VISIBLE}" />
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnContinue"
             android:layout_width="match_parent"
@@ -49,7 +64,8 @@
             android:text="@string/continue_text"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="@dimen/_14ssp" />
+            android:textSize="@dimen/_14ssp"
+            android:visibility="@{isHavingData ? View.VISIBLE : View.GONE}" />
 
     </LinearLayout>
 
