--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -92,13 +92,14 @@
                     tools:text="Pehalwan Dhaba" />
 
                 <TextView
+                    android:id="@+id/tvCategory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/ic_gold_hotel_type"
                     android:paddingHorizontal="15dp"
                     android:paddingVertical="2dp"
                     android:text="@{model.dhabaCategory}"
-                    android:textAllCaps="false"
+                    android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp"
                     android:visibility="@{model.dhabaCategory.isEmpty() ? View.GONE : View.VISIBLE}" />
