hide navigate icon

--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -177,6 +177,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:padding="5dp"
+                    android:visibility="gone"
                     android:src="@drawable/ic_location" />
 
             </LinearLayout>
