--- a/app/src/main/res/layout/view_side_profile.xml
+++ b/app/src/main/res/layout/view_side_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -26,13 +27,22 @@
             android:orientation="horizontal"
             android:padding="@dimen/_10sdp">
 
-            <com.transport.mall.utils.custom.CircleImageView
-                android:id="@+id/imProfile"
-                loadImage="@{userModel.profileImage}"
-                placeholder="@{R.drawable.ic_profile_pic_placeholder}"
-                android:layout_width="@dimen/_60sdp"
-                android:layout_height="@dimen/_60sdp"
-                android:layout_marginEnd="10dp" />
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:elevation="@dimen/_20sdp"
+                android:padding="@dimen/_1sdp"
+                app:cardBackgroundColor="@color/grey_light"
+                app:cardCornerRadius="@dimen/_50sdp">
+
+                <com.transport.mall.utils.custom.CircleImageView
+                    android:id="@+id/imProfile"
+                    loadImage="@{userModel.profileImage}"
+                    placeholder="@{R.drawable.ic_profile_pic_placeholder}"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_60sdp" />
+            </com.google.android.material.card.MaterialCardView>
 
             <LinearLayout
                 android:layout_width="0dp"
