• Kindly shift the "Address" input field below the "Current location | Pick from map" button •	"In progress" status is to be changed to "In review" •	Address field is to be made editable  : Incase the user picks the location from map , and then edits the address , here he should get the confirmation message whether he wants to overwrite the address or not. •	On owner's details page , remove the address field and current location | Pick from map : Address will be captured only on dhaba details page •	On add new dhaba page, user should be able to toggle between the four steps from 1-4 •	After filling all the details , "Save dhaba" on the bank detaills page is to be renamed as "Submit for approval" •	On bank details page, SBI is auto selected by default. Use --select-- as placeholder

--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -135,7 +135,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="number"
-                        android:maxLength="9"
+                        android:maxLength="18"
                         android:text="@={viewModel.bankModel.accountNumber}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
@@ -182,6 +182,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
+                        android:maxLength="30"
                         android:text="@={viewModel.bankModel.accountName}"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
@@ -620,7 +621,7 @@
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:padding="@dimen/_10sdp"
-                    android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save_dhaba)}"
+                    android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.submit_for_approval)}"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_14ssp"
