--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -105,7 +105,7 @@
                     android:visibility="@{model.dhabaCategory.isEmpty() ? View.GONE : View.VISIBLE}" />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvCity"
+                    android:id="@+id/tvAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -114,24 +114,37 @@
                     android:textSize="@dimen/_12ssp"
                     android:textStyle="bold" />
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvAddress"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:text="@{model.city}"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp" />
+                    android:orientation="horizontal">
 
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvOpeningTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:text="Opening 5am to 10pm"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/_12ssp"
-                    android:visibility="gone" />
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvHighway"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:text="@{model.highway}"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12ssp" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:text="@{model.city.trim().isEmpty() || model.highway.trim().isEmpty() ? `` : `, `}"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12ssp" />
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvCity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:text="@{model.city}"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/_12ssp" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -177,8 +190,8 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:padding="5dp"
-                    android:visibility="gone"
-                    android:src="@drawable/ic_location" />
+                    android:src="@drawable/ic_location"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
