--- a/app/src/main/res/layout/dialog_city_selection.xml
+++ b/app/src/main/res/layout/dialog_city_selection.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,6 +14,10 @@
 
         <variable
             name="isHavingData"
+            type="Boolean" />
+
+        <variable
+            name="isHighwaySelection"
             type="Boolean" />
     </data>
 
@@ -41,16 +46,41 @@
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_10sdp" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvNoData"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_semibold"
             android:gravity="center"
+            android:orientation="vertical"
             android:paddingVertical="@dimen/_30sdp"
-            android:text="@string/no_cities_found"
-            android:textColor="@color/black"
-            android:visibility="@{isHavingData ? View.GONE : View.VISIBLE}" />
+            android:visibility="@{isHavingData ? View.GONE : View.VISIBLE}">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvNoData"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="center"
+                android:text="@string/no_cities_found"
+                android:textColor="@color/black" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnAddNew"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:background="@drawable/stroke_btn_selector"
+                android:fontFamily="@font/opensans_regular"
+                android:gravity="center"
+                android:paddingHorizontal="@dimen/_20sdp"
+                android:paddingVertical="@dimen/_5sdp"
+                android:text="@string/add_highway"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_12ssp"
+                android:visibility="@{isHighwaySelection ? View.VISIBLE : View.GONE}"
+                tools:text="@string/add_highway" />
+
+        </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnContinue"
